Add README and explain key decisions
