# src/routes/auth.js
@@ -3,8 +3,8 @@ import { prisma } from "../startup/connectToDatabase.js";
 
 const router = express.Router();
 
-// Ordinarily, we'd use the username/email & password, store the hashed password in the DB and return a JWT with an expiry date,
-// but for the sake of simplicity and brevity, we'll return a dummy value for now
+// Ordinarily, we'd use the username/email & password, store the hashed password in the DB and set JWT in the header
+// with an expiry date, but for the sake of simplicity and brevity, we'll return a dummy value for now
 
 router.post("/", async (req, res) => {
   const { email } = req.body;
@@ -21,6 +21,8 @@ router.post("/", async (req, res) => {
 
   // Return a dummy token
   const dummyToken = `dummy-token-${user.id}`;
+
+  res.set(`Authorization`, `Bearer ${dummyToken}`);
   res.json({ token: dummyToken });
 });
 
